--- a/WarsawCityGame/WarsawCityGames.App/build.gradle
+++ b/WarsawCityGame/WarsawCityGames.App/build.gradle
@@ -23,8 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-
-
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.1.+'
     apt "com.google.dagger:dagger-compiler:2.0.1"
 
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
@@ -37,7 +36,7 @@ dependencies {
     compile project(':WarsawCityGames.Shared')
     compile project(':WarsawCityGames.Models')
     compile 'com.jakewharton:butterknife:7.0.1'
-
+    compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.github.dmytrodanylyk:android-morphing-button:+'
     compile 'com.android.support:support-v4:23.2.0'
