--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/WarsawCityGamesServer.Services.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/WarsawCityGamesServer.Services.csproj
@@ -215,7 +215,9 @@
     </Content>
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <None Include="Properties\PublishProfiles\warsawcitygames - FTP %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygames - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\warsawcitygames - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygames - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
