--- a/WarsawCityGameServer/WarsawCityGamesServer.Tests/packages.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Tests/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net46" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
-  <package id="Moq" version="4.5.0" targetFramework="net46" />
+  <package id="Moq" version="4.5.8" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="xunit" version="2.1.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
